--- a/view/src/main/webapp/WEB-INF/jsp/members/map/map-svg.jspx
+++ b/view/src/main/webapp/WEB-INF/jsp/members/map/map-svg.jspx
@@ -4,7 +4,7 @@
           xmlns:collab="urn:jsptld:/WEB-INF/tlds/xcolab.tld"
           version="2.0">
 
-    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="800px" height="500" xml:space="preserve">
+    <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 500" xml:space="preserve">
         <desc>JavaScript chart by amCharts 3.20.19</desc>
         <desc>This map was created using Pixel Map Generator by amCharts and is licensed under the Creative Commons Attribution 4.0 International License. You may use this map the way you see fit as long as proper attribution to the name of amCharts is given in the form of link to http://pixelmap.amcharts.com/ To view a copy of this license, visit http://creativecommons.org/licenses/by/4.0/ If you would like to use this map without any attribution, you can acquire a commercial license for the JavaScript Maps - a tool that was used to produce this map. To do so, visit amCharts Online Store: http://www.amcharts.com/online-store/</desc>
         <g>
