--- a/view/src/main/resources/static/sass/partials/components/_c-Helpbox.scss
+++ b/view/src/main/resources/static/sass/partials/components/_c-Helpbox.scss
@@ -2,7 +2,7 @@ $c-Helpbox__borderRadius: 10px !default;
 $c-Helpbox__backgroundColor: white !default;
 $c-Helpbox__borderColor: $t-Color__primary__grey--dark !default;
 
-$c-Helpbox__header__padding: 14px 10px 0 19px !default;
+$c-Helpbox__header__padding: 8px 10px 4px 19px !default;
 
 $c-Helpbox__header__background: url(/images/grid_t.gif) !default;
 
@@ -13,7 +13,7 @@ $c-Helpbox__header__title__capitalization: $b-Typography__capitalization--none !
 $c-Helpbox__text__textColor: $t-Color__grey--darkest !default;
 $c-Helpbox__text__fontWeight: $b-Typography__fontWeight !default;
 
-$c-Helpbox__header__close__marginTop: -5px !default;
+$c-Helpbox__header__close__marginTop: -3px !default;
 
 .c-Helpbox {
   width: 970px;
@@ -25,7 +25,6 @@ $c-Helpbox__header__close__marginTop: -5px !default;
 
 .c-Helpbox__header {
   background: $c-Helpbox__header__background;
-  height: 24px;
   padding: $c-Helpbox__header__padding;
   color: black;
   font-size: 15px;
