--- a/view/src/main/webapp/WEB-INF/jsp/members/map/page.jspx
+++ b/view/src/main/webapp/WEB-INF/jsp/members/map/page.jspx
@@ -4,7 +4,7 @@
           xmlns:collab="urn:jsptld:/WEB-INF/tlds/xcolab.tld"
           version="2.0">
 <jsp:directive.page contentType="text/html; charset=UTF-8" pageEncoding="UTF-8"/>
-<xcolab:layout title="Members">
+<xcolab:layout title="Members Map">
 
     <jsp:include page="map.jspx"/>
 
